feat: refactor announcement and add user profile